--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.bg-top{
+  background:url('./assets/top-bg.jpg') ;
+  background-size: cover;
+  background-position: center;
+  min-height: 400px;
+}
+
+.bg-light-10{
+  background-color: rgba(255, 255, 255, 0.38);
+}
+.btn-dark-update{
+  background-color: aliceblue;
+  font-size: 2rem;
+}
