--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,8 +43,9 @@ code {
 .bg-light{
   background-color: #fff;
 }
-table tr td, table tr th{
+tr td{
   background-color: rgba(255, 255, 255, 0.851) !important;
+  border: rgba(255, 255, 255, 0) 1px !important;
 }
 tr {
   line-height: 30px;
